objects/CEE__c.object
<CustomObject>
    <fields>
        <fullName>Go_To_Market_Details__c</fullName>
        <label>Go To Market Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Led</fullName>
                </value>
                <value>
                    <fullName>Sales Led</fullName>
                </value>
                <value>
                    <fullName>Services Led</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITCE_Request_Type__c</fullName>
        <description>ITCE Request Type</description>
        <label>ITCE Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upcoming IT Engagements</fullName>
                </value>
                <value>
                    <fullName>Completed IT Engagements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impacts__c</fullName>
        <description>JiffleNow Re-design: To show whether opportunity increased or descreased based on before event amount</description>
        <formula>If(Current_Opportunity_Amount__c - Opportunity_Amount_Before_Event__c=0, 
IMAGE("/servlet/servlet.FileDownload?file=01534000001i3hQ","0"), 
If(Current_Opportunity_Amount__c - Opportunity_Amount_Before_Event__c &lt; 0, 
IMAGE("/servlet/servlet.FileDownload?file=01534000001i3hP","2"), 
IMAGE("/servlet/servlet.FileDownload?file=01534000001i3hR","1")
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influencer__c</fullName>
        <inlineHelpText>Classify an additional Influencer from the customer that will attend</inlineHelpText>
        <label>Influencer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Apps Buyer</fullName>
                </value>
                <value>
                    <fullName>Chairman</fullName>
                </value>
                <value>
                    <fullName>Chief Digital Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Experience Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Finance Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Information Security Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Marketing Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operations Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Science Officer</fullName>
                </value>
                <value>
                    <fullName>Contact Center Buyer</fullName>
                </value>
                <value>
                    <fullName>Data Center Manager</fullName>
                </value>
                <value>
                    <fullName>Desktop Apps Buyer</fullName>
                </value>
                <value>
                    <fullName>Executive Vice President</fullName>
                </value>
                <value>
                    <fullName>Head of IT Infrastructure</fullName>
                </value>
                <value>
                    <fullName>IT Architect</fullName>
                </value>
                <value>
                    <fullName>Line of Business Manager</fullName>
                </value>
                <value>
                    <fullName>Networking Buyer</fullName>
                </value>
                <value>
                    <fullName>Procurement Generalist</fullName>
                </value>
                <value>
                    <fullName>Security Architect</fullName>
                </value>
                <value>
                    <fullName>Security Ops / Analyst</fullName>
                </value>
                <value>
                    <fullName>Server Buyer</fullName>
                </value>
                <value>
                    <fullName>Storage Buyer</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Video Buyer</fullName>
                </value>
                <value>
                    <fullName>Voice/ Telecom Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jiffle_Event_End_Date__c</fullName>
        <description>JiffleNow Re-design: To show end date for Events</description>
        <formula>Jiffle_Event__r.Event_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jiffle Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jiffle_Event_Start_Date__c</fullName>
        <description>JiffleNow Re-design: To show start date for Events</description>
        <formula>Jiffle_Event__r.Event_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jiffle Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jiffle_Event_UUID__c</fullName>
        <formula>Jiffle_Event__r.Event_UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jiffle_Event_UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jiffle_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>JiffleNow Re-design: To create relationship of Events with CEE-Lookup Relationship</description>
        <label>Global Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Jiffle_Event__c.Event_Start_Date__c</field>
                <operation>greaterOrEqual</operation>
                <valueField>Jiffle_Event__c.Jiffle_Today_Date__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Jiffle_Event__c</referenceTo>
        <relationshipLabel>Customer Engagements &amp; Events</relationshipLabel>
        <relationshipName>Customer_Engagements_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jiffle_Opportunity_Type__c</fullName>
        <description>JiffleNow Re-design: To capture whether the record was created as part of event or influenced by Event with 15 days of event</description>
        <label>Jiffle Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                    <default>true</default>
                    <label>Existing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jiffle_Reporting_Tracker__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jiffle Reporting Tracker</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jifflenow_Event_URL1__c</fullName>
        <formula>Jiffle_Event__r.Jifflenow_Event_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jifflenow Event URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Technology__c</fullName>
        <description>Key Technology for CPOC Request</description>
        <label>Key Technology</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Primary_Architecture__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACI</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Compute</fullName>
                </value>
                <value>
                    <fullName>Conferencing</fullName>
                </value>
                <value>
                    <fullName>Email/Web Security</fullName>
                </value>
                <value>
                    <fullName>EPN</fullName>
                </value>
                <value>
                    <fullName>Firewalling</fullName>
                </value>
                <value>
                    <fullName>HCS/Storage</fullName>
                </value>
                <value>
                    <fullName>Interoperability</fullName>
                </value>
                <value>
                    <fullName>IPS/IDS</fullName>
                </value>
                <value>
                    <fullName>ISE/TrustSec</fullName>
                </value>
                <value>
                    <fullName>IWAN</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>NMS/Orchestration</fullName>
                </value>
                <value>
                    <fullName>OpenDNS</fullName>
                </value>
                <value>
                    <fullName>Optical</fullName>
                </value>
                <value>
                    <fullName>Orchestration(MANO)</fullName>
                </value>
                <value>
                    <fullName>Routing</fullName>
                </value>
                <value>
                    <fullName>SDA</fullName>
                </value>
                <value>
                    <fullName>SDN</fullName>
                </value>
                <value>
                    <fullName>SDN/NFV</fullName>
                </value>
                <value>
                    <fullName>SDN/NFV/NFVI</fullName>
                </value>
                <value>
                    <fullName>SDWAN</fullName>
                </value>
                <value>
                    <fullName>Security-Advanced Threat (AMP/Threatgrid)</fullName>
                </value>
                <value>
                    <fullName>Security-ASA</fullName>
                </value>
                <value>
                    <fullName>Security-Cloud</fullName>
                </value>
                <value>
                    <fullName>Security-Email</fullName>
                </value>
                <value>
                    <fullName>Security Gateway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>Language required for translation (required if Translator Needed).</inlineHelpText>
        <label>Translator Language Old</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <description>The field shows the Lead time between the date when the event was submitted and when the event start date is.</description>
        <formula>Start_Date_Time__c  -  Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_GTE_ID__c</fullName>
        <inlineHelpText>Required if Legal Compliance is "Yes"; MUST provide 10 business days prior to the EBC/EC visit or your booking WILL BE CANCELLED.</inlineHelpText>
        <label>GTE ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Instruction__c</fullName>
        <formula>"To determine if you must complete GTE form, " + HYPERLINK("https://cisco.jiveon.com/groups/anti-corruption-bribery/pages/gifts-travel-entertainment", "please go here") + " (Jive policy guideline link). To get GTE ID, " + HYPERLINK("https://ibpm.cisco.com/fines/gte/login", "please go here") + " (GTE Tool link)"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Instruction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <inlineHelpText>Expenses are Travel, Meals, Gifts, Entertainment and Conference Fees for Public Sector and/or Government Official recipients.</inlineHelpText>
        <label>Cisco Paid Expenses?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Equipment_Reservations__c</fullName>
        <description>Link to Equipment Reservations is related to CPOC lab request</description>
        <label>Link to Equipment Reservations</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lost_Opportunity_Value_After_180__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Lost Opportunity Amount After 180days the End of the event</description>
        <label>Lost  Opportunity Value After 180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_Opportunity_Value_After_30__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture lost Opportunity Amount After 30days the End of the event</description>
        <label>Lost  Opportunity Value After 30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_Opportunity_Value_After_90__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture lost Opportunity Amount After 90days the End of the event</description>
        <label>Lost  Opportunity Value After 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meeting_Delivery_Type__c</fullName>
        <description>The medium in which the engagement will take place.</description>
        <inlineHelpText>This is the medium in which the engagement will take place, e.g. over TelePresence or in person.</inlineHelpText>
        <label>Meeting Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WebEx</fullName>
                </value>
                <value>
                    <fullName>TelePresence</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Duration__c</fullName>
        <description>This field gives the duration of the meeting</description>
        <formula>(End_Date_Time__c  -  Start_Date_Time__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Duration (in Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to store Meeting Requestor</description>
        <label>Meeting Requestor/Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements_and_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDA_Instruction__c</fullName>
        <description>Instruction Field - NDA information</description>
        <formula>"For additional information regarding the NDA process, please go " + HYPERLINK("http://wwwin.cisco.com/legal/nda/", "here")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NDA Instruction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA_Needed__c</fullName>
        <inlineHelpText>Is a non-disclosure agreement (NDA) or confidentiality agreement required?</inlineHelpText>
        <label>NDA Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDA_Number__c</fullName>
        <inlineHelpText>NDA number for customer engagement (required if NDA needed).</inlineHelpText>
        <label>NDA Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_Oppty_Value_After_180__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Not forecastable Opportunity Amount After 180days the End of the event</description>
        <label>Not Forecastable Oppty Value After 180</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NF_Oppty_Value_After_30__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Not forecastable Opportunity Amount After 30days the End of the event</description>
        <label>Not Forecastable Oppty Value After 30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NF_Oppty_Value_After_90__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Not forecastable Opportunity Amount After 90days the End of the event</description>
        <label>Not Forecastable Oppty Value After 90</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NF_Oppty_Value_Before__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Not Forecastable Oppty Value Before</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <description>This is survey formula field to calculate the NPS Score.</description>
        <formula>if(Total_Survey_Responses__c = 0, NULL, 
if(AND(Number_of_Survey_Promoters__c=0,Number_of_Survey_Detractors__c=0,Number_of_Survey_Passives__c=0),NULL,CEILING(((Number_of_Survey_Promoters__c- Number_of_Survey_Detractors__c) / (Total_Survey_Responses__c )) * 100)) 
)</formula>
        <inlineHelpText>Net Promoter Score (NPS) is calculated by subtracting the % Detractors from % Promoters.   Promoters scores are 9/10, Detractors scores are 0 – 6, Passives scores are 7/8.</inlineHelpText>
        <label>CSAT NPS Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cisco_Attendees__c</fullName>
        <description>The number of Cisco attendees that are expected to attend this engagement</description>
        <inlineHelpText>The number of Cisco attendees that are expected to attend this engagement</inlineHelpText>
        <label>Number of Cisco Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cisco_Executives__c</fullName>
        <label>Number of Cisco Executives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Customer_Attendees__c</fullName>
        <description>The number of Customer attendees that are expected to attend this engagement.</description>
        <inlineHelpText>The number of Customer attendees that are expected to attend this engagement.</inlineHelpText>
        <label>Number of Customer Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Customer_Executives__c</fullName>
        <description>This is a subset of Number of Customer Attendees.</description>
        <inlineHelpText>This is a subset of Number of Customer Attendees.</inlineHelpText>
        <label>Number of Customer Executives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Partner_Attendees__c</fullName>
        <description>Number of Partner attendees that are expected to attend this engagement</description>
        <inlineHelpText>The number of Partner attendees that are expected to attend this engagement.</inlineHelpText>
        <label>Number of Partner Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Survey_Detractors__c</fullName>
        <description>This is the inquisium field to calculate the number of detractors.</description>
        <label>CSAT Number of Survey Detractors</label>
        <summaryFilterItems>
            <field>CEE_Customer_Feedback__c.Recommendation_Type__c</field>
            <operation>equals</operation>
            <value>Detractors</value>
        </summaryFilterItems>
        <summaryForeignKey>CEE_Customer_Feedback__c.CEE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Survey_Passives__c</fullName>
        <description>This is the inquisium integration field to calculate the Number of passives.</description>
        <label>CSAT Number of Survey Passives</label>
        <summaryFilterItems>
            <field>CEE_Customer_Feedback__c.Recommendation_Type__c</field>
            <operation>equals</operation>
            <value>Passives</value>
        </summaryFilterItems>
        <summaryForeignKey>CEE_Customer_Feedback__c.CEE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Survey_Promoters__c</fullName>
        <description>This is the integration field to calculate the number of survey promoters</description>
        <label>CSAT Number of Survey Promoters</label>
        <summaryFilterItems>
            <field>CEE_Customer_Feedback__c.Recommendation_Type__c</field>
            <operation>equals</operation>
            <value>Promoters</value>
        </summaryFilterItems>
        <summaryForeignKey>CEE_Customer_Feedback__c.CEE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OBA_Count__c</fullName>
        <label>OBA Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBX_Survey_Reminder_Date__c</fullName>
        <description>It will be used to populate the survey remainder end date for sending survey reminder mail for OBX</description>
        <formula>CASE(
MOD(DATEVALUE(End_Date_Time__c ) - DATE(1900, 1, 7), 7),
0, DATEVALUE(End_Date_Time__c) + 2 + FLOOR((2-1)/5)*2,
1, DATEVALUE(End_Date_Time__c) + 2 + FLOOR((2)/5)*2,
2, DATEVALUE(End_Date_Time__c) + 2 + FLOOR((2+1)/5)*2,
3, DATEVALUE(End_Date_Time__c) + 2 + FLOOR((2+2)/5)*2,
4, DATEVALUE(End_Date_Time__c) + 2 + FLOOR((2+3)/5)*2,
5, DATEVALUE(End_Date_Time__c) + 2 + CEILING((2)/5)*2,
6, DATEVALUE(End_Date_Time__c) - IF(2&gt;0,1,0) + 2 + CEILING((2)/5)*2,
null)</formula>
        <label>OBX Survey Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_After_180_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Opportunity Amount After 180days the End of the event</description>
        <label>Opportunity Amount After 180 Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_After_30_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Opportunity Amount After 30days the End of the event</description>
        <label>Opportunity Amount After 30 Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_After_90_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Opportunity Amount After 90days the End of the event</description>
        <label>Opportunity Amount After 90 Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Before_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Opportunity Amount Before the start of the event</description>
        <label>Opportunity Amount Before Event</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Available__c</fullName>
        <inlineHelpText>Indicate whether there is an opportunity associated with this account.</inlineHelpText>
        <label>Opportunity Available?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No-Opportunity not created yet</fullName>
                </value>
                <value>
                    <fullName>Yes (Enter Opportunity/Deal ID below. If more than one Deal ID please add in Additional Comments)</fullName>
                </value>
                <value>
                    <fullName>Cisco Internal</fullName>
                </value>
                <value>
                    <fullName>Service Provider Workshop or Similar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Booked__c</fullName>
        <label>Opportunity Booked</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>This custom field is used to pull the opportunity stage on CEE record</description>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status_After_180_Days__c</fullName>
        <description>JiffleNow Re-design: To Capture Opportunity Status After 180 days of the event</description>
        <label>Opportunity Status After 180 Days Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status_After_30_Days__c</fullName>
        <description>JiffleNow Re-design: To Capture Opportunity Status After 30 days of the event</description>
        <label>Opportunity Status After 30 Days Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status_After_90_Days__c</fullName>
        <description>JiffleNow Re-design: To Capture Opportunity Status After 90 days of the event</description>
        <label>Opportunity Status After 90 Days Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status_Before_Event__c</fullName>
        <description>JiffleNow Re-design: To Capture Opportunity Status Before the event</description>
        <label>Opportunity Status Before Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For Best Search results use the Deal ID or Opportunity name to search for the opportunity you want to associate with the request. Click lookup, enter information and select the opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Engagements &amp; Events</relationshipLabel>
        <relationshipName>Customer_Engagement_Scheduler</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_value_from_any_Status_to_Boo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field captures opportunity value when opportunity status is  booked based on WF filed update</description>
        <label>Opportunity Value From Booked Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OtherFSOMandatory__c</fullName>
        <formula>if(ISPICKVAL(EBC_CBC_Location__c,'Other/FSO'),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OtherFSOMandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Briefing_Services__c</fullName>
        <label>Other Briefing Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco Advanced Services</fullName>
                </value>
                <value>
                    <fullName>Cisco Business Workshop</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital</fullName>
                </value>
                <value>
                    <fullName>Cisco Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Cisco on Cisco IT</fullName>
                </value>
                <value>
                    <fullName>Cisco Partner Ecosytem</fullName>
                </value>
                <value>
                    <fullName>Cisco Strategy Overview</fullName>
                </value>
                <value>
                    <fullName>Cisco Technical Services</fullName>
                </value>
                <value>
                    <fullName>Cisco Vision for Telecoms</fullName>
                </value>
                <value>
                    <fullName>Chuck Robbins Briefings</fullName>
                </value>
                <value>
                    <fullName>Classic Briefings</fullName>
                </value>
                <value>
                    <fullName>Dignitary Briefings</fullName>
                </value>
                <value>
                    <fullName>Momentum Briefings</fullName>
                </value>
                <value>
                    <fullName>OBX Briefings</fullName>
                </value>
                <value>
                    <fullName>Self-Serve Briefings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <label>Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PM_Alias__c</fullName>
        <formula>$User.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Engagement_Message_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag for a workflow/trigger combo to check whether the trigger has been fired already.</description>
        <label>Post Engagement Message Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Engagement_Notes_information__c</fullName>
        <description>One of three text fields for Post-Engagement Notes.</description>
        <inlineHelpText>What information from this engagement can be useful for the next presenter?</inlineHelpText>
        <label>Useful Information for Next Presenter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>